--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -69,7 +69,7 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team_members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
+                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team-members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
                   - {label: "📞 Özel Telefon", name: "custom_phone", widget: "string", required: false, hint: "Bu fuar için özel telefon numarası (opsiyonel)"}
                   - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, hint: "Telefon numarasını card'da gösterme"}
                   - {label: "📝 Özel Not", name: "note", widget: "text", required: false, hint: "Bu fuar için özel not (opsiyonel)"}
@@ -145,7 +145,7 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team_members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
+                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team-members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
                   - {label: "📞 Özel Telefon", name: "custom_phone", widget: "string", required: false, hint: "Bu fuar için özel telefon numarası (opsiyonel)"}
                   - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, hint: "Telefon numarasını card'da gösterme"}
                   - {label: "📝 Özel Not", name: "note", widget: "text", required: false, hint: "Bu fuar için özel not (opsiyonel)"}
@@ -221,7 +221,7 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team_members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
+                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team-members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
                   - {label: "📞 Özel Telefon", name: "custom_phone", widget: "string", required: false, hint: "Bu fuar için özel telefon numarası (opsiyonel)"}
                   - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, hint: "Telefon numarasını card'da gösterme"}
                   - {label: "📝 Özel Not", name: "note", widget: "text", required: false, hint: "Bu fuar için özel not (opsiyonel)"}
@@ -297,7 +297,7 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team_members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
+                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team-members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
                   - {label: "📞 Özel Telefon", name: "custom_phone", widget: "string", required: false, hint: "Bu fuar için özel telefon numarası (opsiyonel)"}
                   - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, hint: "Telefon numarasını card'da gösterme"}
                   - {label: "📝 Özel Not", name: "note", widget: "text", required: false, hint: "Bu fuar için özel not (opsiyonel)"}
@@ -373,7 +373,7 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team_members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
+                  - {label: "👤 Temsilci Seç", name: "team_member", widget: "relation", collection: "team-members", search_fields: ["name", "email"], display_fields: ["name", "title.tr", "department"], value_field: "slug", hint: "Ekip üyelerinden temsilci seçin"}
                   - {label: "📞 Özel Telefon", name: "custom_phone", widget: "string", required: false, hint: "Bu fuar için özel telefon numarası (opsiyonel)"}
                   - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, hint: "Telefon numarasını card'da gösterme"}
                   - {label: "📝 Özel Not", name: "note", widget: "text", required: false, hint: "Bu fuar için özel not (opsiyonel)"}
@@ -431,32 +431,10 @@ collections:
       - {label: "Sıralama", name: "order", widget: "number", value_type: "int", min: 1, default: 1, hint: "Gösterim sırası"}
       - {label: "Aktif", name: "is_active", widget: "boolean", default: true, hint: "Partner gösterilsin mi?"}
 
-  # EKİBİMİZ YÖNETİMİ
-  - name: "team_management"
-    label: "👥 Ekibimiz"
-    files:
-      - label: "Ekip Sayfası Ayarları"
-        name: "team_settings"
-        file: "src/content/team/settings.yml"
-        fields:
-          - label: "Sayfa Başlıkları"
-            name: "titles"
-            widget: "object"
-            fields:
-              - {label: "Başlık (Türkçe)", name: "tr", widget: "string", default: "Profesyonel Ekibimiz"}
-              - {label: "Başlık (İngilizce)", name: "en", widget: "string", default: "Our Professional Team"}
-          - label: "Sayfa İçeriği"
-            name: "content"
-            widget: "object"
-            fields:
-              - {label: "İçerik (Türkçe)", name: "tr", widget: "markdown", hint: "Ekip hakkında genel açıklama"}
-              - {label: "İçerik (İngilizce)", name: "en", widget: "markdown", hint: "Team general description"}
-          - {label: "Ekip Sayısı", name: "team_count", widget: "string", default: "76 kişilik", hint: "Örnek: 76 kişilik"}
-
   # EKİP ÜYELERİ
-  - name: "team_members"
+  - name: "team-members"
     label: "👤 Ekip Üyeleri"
-    folder: "src/content/team/members"
+    folder: "src/content/team-members"
     create: true
     slug: "{{fields.slug}}"
     identifier_field: "name"
@@ -470,11 +448,14 @@ collections:
         fields:
           - {label: "Türkçe", name: "tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü", "Yönetim Kurulu Başkanı", "Teknik Proje Direktörü", "Operasyon Müdürü", "Finansman Müdürü", "Muhasebe Müdürü", "Departman Asistanı"]}
           - {label: "İngilizce", name: "en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager", "Chairman", "Technical Project Director", "Operations Manager", "Finance Manager", "Accounting Manager", "Department Assistant"]}
-      - {label: "🏢 Departman", name: "department", widget: "select", options: ["Yönetim Kurulu", "Moda Fuarları", "Ev Tekstili ve Dekorasyon Fuarları", "Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları", "Kalıp & Plastik, İhtisas, Havuz", "Deri Fuarları & Güvenlik Sistemleri Fuarları", "Teknik Proje", "Fuar Seyahatleri / TF Seyahat Acentası", "Finans & Muhasebe", "Dış İlişkiler ve Uluslararası Satış", "Lojistik ve Ulaşım", "Bilgi İşlem", "Grafik Tasarım"]}
+      - label: "🏢 Departman"
+        name: "department"
+        widget: "object"
+        fields:
+          - {label: "Türkçe", name: "tr", widget: "select", options: ["Yönetim Kurulu", "Moda Fuarları", "Ev Tekstili ve Dekorasyon Fuarları", "Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları", "Kalıp & Plastik, İhtisas, Havuz", "Deri Fuarları & Güvenlik Sistemleri Fuarları", "Teknik Proje", "Fuar Seyahatleri / TF Seyahat Acentası", "Finans & Muhasebe", "Dış İlişkiler ve Uluslararası Satış", "Lojistik ve Ulaşım", "Bilgi İşlem", "Grafik Tasarım"]}
+          - {label: "İngilizce", name: "en", widget: "select", options: ["Board of Directors", "Fashion Fairs", "Home Textile and Decoration Fairs", "Furniture and Furniture Auxiliary Industry & Electrical and Lighting Fairs", "Mold & Plastic, Specialty, Pool", "Leather Fairs & Security Systems Fairs", "Technical Project", "Fair Travel / TF Travel Agency", "Finance & Accounting", "Foreign Relations and International Sales", "Logistics and Transportation", "Information Technology", "Graphic Design"]}
       - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
       - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
-      - {label: "📷 Fotoğraf", name: "photo", widget: "image", required: false, hint: "Ekip üyesi fotoğrafı (opsiyonel)"}
-      - {label: "📝 Kısa Biyografi", name: "bio", widget: "text", required: false, hint: "Kısa tanıtım metni"}
       - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", min: 1, default: 1, hint: "Departman içindeki sıralama"}
       - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
       - {label: "🎯 Fuar Temsilcisi", name: "is_fair_representative", widget: "boolean", default: false, hint: "Bu kişi fuar temsilcisi olarak seçilebilsin mi?"}
