feat: CMS ekip listesi düzenlendi ve departman sıralaması sabitlendi
🎯 CMS Düzenlemeleri:
- Ekip üyesi listesinde sadece isim gösterimi
- Slug field'ı kaldırıldı (Astro otomatik oluşturuyor)
- summary: sadece {{fields.name}}

📋 Departman Sıralaması - SABİTLENDİ:
1. Yönetim Kurulu
2. Moda Fuarları
3. Ev Tekstili ve Dekorasyon Fuarları
4. Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
5. Kalıp & Plastik, İhtisas, Havuz
6. Deri Fuarları & Güvenlik Sistemleri Fuarları
7. Teknik Proje
8. Fuar Seyahatleri / TF Seyahat Acentası
9. Finans & Muhasebe
10. Dış İlişkiler ve Uluslararası Satış
11. Lojistik ve Ulaşım
12. Bilgi İşlem
13. Grafik Tasarım

🔧 Teknik Çözüm:
- departmentOrder array ile sabit sıralama
- orderedTeamData ile organize edilmiş veri
- CMS'te temiz görünüm

✅ Test Sonucu:
- 33 ekip üyesi yüklendi
- Departmanlar istenen sırada
- Build başarılı

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -436,11 +436,10 @@ collections:
     label: "👤 Ekip Üyeleri"
     folder: "src/content/team-members"
     create: true
-    slug: "{{fields.slug}}"
+    slug: "{{slug}}"
     identifier_field: "name"
-    summary: "{{fields.name}} - {{fields.department}} - {{fields.title_tr}}"
+    summary: "{{fields.name}}"
     fields:
-      - {label: "Slug", name: "slug", widget: "string", hint: "URL için benzersiz isim (örnek: seval-arslan)"}
       - {label: "👤 Ad Soyad", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
       - label: "🏢 Unvan"
         name: "title"
