--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,6 +28,15 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
+          - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Aktif Fuarlar", hint: "Bu yıl nerede gösterilecek?"}
+          - label: "📝 Sayfa İçeriği"
+            name: "page_content"
+            widget: "object"
+            fields:
+              - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", default: "2026 Fuar Takvimi", hint: "Örnek: 2026 Fuar Takvimi"}
+              - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", default: "2026 Fair Calendar", hint: "Örnek: 2026 Fair Calendar"}
+              - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2026 yılında dünya çapında organize edeceğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz.", hint: "Sayfa açıklaması"}
+              - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2026, we bring Turkish companies together with global markets at prestigious fairs we organize worldwide.", hint: "Page description"}
           - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
@@ -458,6 +467,26 @@ collections:
       - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", min: 1, default: 1, hint: "Departman içindeki sıralama"}
       - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
       - {label: "🎯 Fuar Temsilcisi", name: "is_fair_representative", widget: "boolean", default: false, hint: "Bu kişi fuar temsilcisi olarak seçilebilsin mi?"}
+
+  # KRONOLOJİ YÖNETİMİ
+  - name: "chronology"
+    label: "📜 Kronoloji"
+    folder: "src/content/chronology"
+    create: true
+    slug: "{{fields.year}}-{{slug}}"
+    identifier_field: "year"
+    summary: "{{fields.year}} - {{fields.fair_name}} ({{fields.city}}, {{fields.country}})"
+    fields:
+      - {label: "📅 Yıl", name: "year", widget: "number", value_type: "int", min: 2015, max: 2030, hint: "Fuar yılı"}
+      - {label: "🎪 Fuar Adı", name: "fair_name", widget: "string", hint: "Örnek: LeShow Moskova"}
+      - {label: "🏙️ Şehir", name: "city", widget: "string", hint: "Örnek: Moskova"}
+      - {label: "🌍 Ülke", name: "country", widget: "string", hint: "Örnek: Rusya"}
+      - {label: "📐 Alan (m²)", name: "area", widget: "string", required: false, hint: "Örnek: 15,000 m²"}
+      - {label: "👥 Katılımcı Sayısı", name: "participants", widget: "string", required: false, hint: "Örnek: 450"}
+      - {label: "🏷️ Sektör", name: "sector", widget: "string", hint: "Örnek: Deri ve Kürk"}
+      - {label: "📝 Açıklama", name: "description", widget: "text", required: false, hint: "Fuar hakkında ek bilgiler"}
+      - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true}
+      - {label: "🔢 Sıralama", name: "order", widget: "number", value_type: "int", default: 1, hint: "Kronoloji içindeki sıralama"}
 
   # SLIDER YÖNETİMİ - Otomatik CMS Entegrasyonu
   - name: "slider_settings"
